--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -4,5 +4,8 @@ height: 30px;
 background-color: #fff;
 border: 0;
 border-radius: 10px 10px 10px 10px;
-color: #000
+color: #000;
+display: flex;
+align-items: center;
+justify-content: center;
 }
